// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AreaChart snapShot testing renders Areachart correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_4"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone5"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_4"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_4"
        transform="translate(40, 0)"
      />
      <g>
        <rect
          fill="transparent"
          height={-20}
          id="rectangle3"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={-20}
        />
      </g>
      <g>
        <path
          d="M40,-0.625L-20,20"
          fill="transparent"
          id="0-line-areaChart_0"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          opacity={1}
          stroke="red"
          strokeWidth={3}
        />
        <path
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
          fill="red"
          fillOpacity={0.7}
          id="0-graph-areaChart_0"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
        <g
          clipPath="url(#clip)"
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
        >
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle2_0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle2_1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
        </g>
        <line
          id="verticalLine_1"
          opacity={0.5}
          stroke="red"
          strokeDasharray={5.5}
          strokeWidth={1}
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-OverflowSet
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AreaChart snapShot testing renders enabledLegendsWrapLines correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_22"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone23"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_22"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_22"
        transform="translate(40, 0)"
      />
      <g>
        <rect
          fill="transparent"
          height={-20}
          id="rectangle21"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={-20}
        />
      </g>
      <g>
        <path
          d="M40,-0.625L-20,20"
          fill="transparent"
          id="0-line-areaChart_18"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          opacity={1}
          stroke="red"
          strokeWidth={3}
        />
        <path
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
          fill="red"
          fillOpacity={0.7}
          id="0-graph-areaChart_18"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
        <g
          clipPath="url(#clip)"
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
        >
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle20_0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle20_1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
        </g>
        <line
          id="verticalLine_19"
          opacity={0.5}
          stroke="red"
          strokeDasharray={5.5}
          strokeWidth={1}
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div
        className=
            ms-OverflowSet
            {
              display: flex;
              flex-wrap: wrap;
              justify-content: unset;
              position: relative;
            }
        role="listbox"
      >
        <div
          className=
              ms-OverflowSet-item
              {
                display: inherit;
                flex-shrink: 0;
              }
        >
          <button
            aria-label="metaData1"
            aria-posinset={1}
            aria-selected={false}
            aria-setsize={1}
            className=

                {
                  align-items: center;
                  background: none;
                  border: none;
                  cursor: pointer;
                  display: flex;
                  outline: transparent;
                  padding-bottom: 8px;
                  padding-left: 8px;
                  padding-right: 8px;
                  padding-top: 8px;
                  position: relative;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid transparent;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #605e5c;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                  outline-color: #605e5c;
                }
            data-is-focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="option"
          >
            <div
              className=

                  {
                    background-color: red;
                    background-image: ;
                    border-color: red;
                    border: 1px solid;
                    height: 12px;
                    margin-right: 8px;
                    opacity: ;
                    width: 12px;
                  }
                  @media screen and (-ms-high-contrast: active){& {
                    background-image: linear-gradient(to right, red, red);
                    opacity: ;
                  }
            />
            <div
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    color: #323130;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 12px;
                    font-weight: 400;
                    line-height: 16px;
                    opacity: ;
                  }
            >
              metaData1
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AreaChart snapShot testing renders hideLegend hhh correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_10"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone11"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_10"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_10"
        transform="translate(40, 0)"
      />
      <g>
        <rect
          fill="transparent"
          height={-20}
          id="rectangle9"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={-20}
        />
      </g>
      <g>
        <path
          d="M40,-0.625L-20,20"
          fill="transparent"
          id="0-line-areaChart_6"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          opacity={1}
          stroke="red"
          strokeWidth={3}
        />
        <path
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
          fill="red"
          fillOpacity={0.7}
          id="0-graph-areaChart_6"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
        <g
          clipPath="url(#clip)"
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
        >
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle8_0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle8_1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
        </g>
        <line
          id="verticalLine_7"
          opacity={0.5}
          stroke="red"
          strokeDasharray={5.5}
          strokeWidth={1}
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`AreaChart snapShot testing renders hideTooltip correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_16"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone17"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_16"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_16"
        transform="translate(40, 0)"
      />
      <g>
        <rect
          fill="transparent"
          height={-20}
          id="rectangle15"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={-20}
        />
      </g>
      <g>
        <path
          d="M40,-0.625L-20,20"
          fill="transparent"
          id="0-line-areaChart_12"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          opacity={1}
          stroke="red"
          strokeWidth={3}
        />
        <path
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
          fill="red"
          fillOpacity={0.7}
          id="0-graph-areaChart_12"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
        <g
          clipPath="url(#clip)"
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
        >
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle14_0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle14_1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
        </g>
        <line
          id="verticalLine_13"
          opacity={0.5}
          stroke="red"
          strokeDasharray={5.5}
          strokeWidth={1}
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-OverflowSet
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AreaChart snapShot testing renders showXAxisLablesTooltip correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_28"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone29"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_28"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_28"
        transform="translate(40, 0)"
      />
      <g>
        <rect
          fill="transparent"
          height={-20}
          id="rectangle27"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={-20}
        />
      </g>
      <g>
        <path
          d="M40,-0.625L-20,20"
          fill="transparent"
          id="0-line-areaChart_24"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          opacity={1}
          stroke="red"
          strokeWidth={3}
        />
        <path
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
          fill="red"
          fillOpacity={0.7}
          id="0-graph-areaChart_24"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
        <g
          clipPath="url(#clip)"
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
        >
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle26_0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle26_1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
        </g>
        <line
          id="verticalLine_25"
          opacity={0.5}
          stroke="red"
          strokeDasharray={5.5}
          strokeWidth={1}
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-OverflowSet
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AreaChart snapShot testing renders wrapXAxisLables correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_34"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone35"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_34"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_34"
        transform="translate(40, 0)"
      />
      <g>
        <rect
          fill="transparent"
          height={-20}
          id="rectangle33"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={-20}
        />
      </g>
      <g>
        <path
          d="M40,-0.625L-20,20"
          fill="transparent"
          id="0-line-areaChart_30"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          opacity={1}
          stroke="red"
          strokeWidth={3}
        />
        <path
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
          fill="red"
          fillOpacity={0.7}
          id="0-graph-areaChart_30"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
        <g
          clipPath="url(#clip)"
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
        >
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle32_0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle32_1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
        </g>
        <line
          id="verticalLine_31"
          opacity={0.5}
          stroke="red"
          strokeDasharray={5.5}
          strokeWidth={1}
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-OverflowSet
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AreaChart snapShot testing renders yAxisTickFormat correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_40"
  role="presentation"
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone41"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={0}
      style={
        Object {
          "display": "block",
        }
      }
      width={0}
    >
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_40"
        transform="translate(0, -35)"
      />
      <g
        className=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 400;
            }
            @media screen and (-ms-high-contrast: white-on-black){& text {
              fill: rgb(179, 179, 179);
            }
            & path {
              display: none;
            }
            & line {
              fill: #323130;
              opacity: 0.2;
            }
            @media screen and (-ms-high-contrast: white-on-black){& line {
              opacity: 0.1;
              stroke: rgb(179, 179, 179);
            }
        id="yAxisGElementchart_40"
        transform="translate(40, 0)"
      />
      <g>
        <rect
          fill="transparent"
          height={-20}
          id="rectangle39"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          width={-20}
        />
      </g>
      <g>
        <path
          d="M40,-0.625L-20,20"
          fill="transparent"
          id="0-line-areaChart_36"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          opacity={1}
          stroke="red"
          strokeWidth={3}
        />
        <path
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
          fill="red"
          fillOpacity={0.7}
          id="0-graph-areaChart_36"
          onMouseMove={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
        <g
          clipPath="url(#clip)"
          d="M40,-0.625L-20,20L-20,-35L40,-35Z"
        >
          <circle
            cx={40}
            cy={-0.625}
            data-is-focusable={true}
            fill="red"
            id="circle38_0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
          <circle
            cx={-20}
            cy={20}
            data-is-focusable={true}
            fill="red"
            id="circle38_1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            r={0}
            stroke="red"
            strokeWidth={3}
            visibility="hidden"
          />
        </g>
        <line
          id="verticalLine_37"
          opacity={0.5}
          stroke="red"
          strokeDasharray={5.5}
          strokeWidth={1}
          visibility="hidden"
          x1={0}
          x2={0}
          y1={0}
          y2={0}
        />
      </g>
    </svg>
  </div>
  <div
    className=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      className=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            data-automation-id="visibleContent"
            style={
              Object {
                "position": "fixed",
                "visibility": "hidden",
              }
            }
          >
            <div
              className=
                  ms-OverflowSet
                  {
                    display: flex;
                    flex-wrap: wrap;
                    justify-content: unset;
                    position: relative;
                  }
              role="listbox"
            >
              <div
                className=
                    ms-OverflowSet-item
                    {
                      display: inherit;
                      flex-shrink: 0;
                    }
              >
                <button
                  aria-label="metaData1"
                  aria-posinset={1}
                  aria-selected={false}
                  aria-setsize={1}
                  className=

                      {
                        align-items: center;
                        background: none;
                        border: none;
                        cursor: pointer;
                        display: flex;
                        outline: transparent;
                        padding-bottom: 8px;
                        padding-left: 8px;
                        padding-right: 8px;
                        padding-top: 8px;
                        position: relative;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid transparent;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active){.ms-Fabric--isFocusVisible &:focus:after {
                        outline-color: #605e5c;
                      }
                  data-is-focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  role="option"
                >
                  <div
                    className=

                        {
                          background-color: red;
                          background-image: ;
                          border-color: red;
                          border: 1px solid;
                          height: 12px;
                          margin-right: 8px;
                          opacity: ;
                          width: 12px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          background-image: linear-gradient(to right, red, red);
                          opacity: ;
                        }
                  />
                  <div
                    className=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 12px;
                          font-weight: 400;
                          line-height: 16px;
                          opacity: ;
                        }
                  >
                    metaData1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
